testsuite/tests/typecheck/should_fail/T15067.stderr
T15067.hs:9:14: error: [GHC-39999]
    • No instance for ‘Typeable (# | #)’
        arising from a use of ‘typeRep’
      NB: ‘(# | #)’ is an unboxed sum type
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘floopadoop’: floopadoop = typeRep
